# cpp-xctest

./: .gitignore  .gitmodules  .gitmodules.off  CMakeLists.txt  README.md  README.txt
hello_led/: CMakeLists.txt
hello_led/.dependencies/: gpio
hello_led/src/: hello_led.cpp
hello_lib/: CMakeLists.txt  README.txt
hello_lib/myLib/: CMakeLists.txt
hello_lib/myLib/src/: NewCppClass.cpp
hello_lib/src/: hello_lib.cpp
hello_ncurses/: CMakeLists.txt  README.md
hello_ncurses/src/: hello_ncurses.cpp
hello_ncurses/src/main/: LayoutManager.cpp  LayoutManager.h  Screen.cpp  Screen.h  Window.cpp  Window.h  XCurses.cpp  XCurses.h  data_types.h
hello_poco/: CMakeLists.txt  README.md
hello_poco/src/: hello_poco.cpp
hello_qt/: CMakeLists.txt
hello_qt/src/: hello_qt.cpp
hello_qt/tests/: CMakeLists.txt
hello_qt/tests/ext_tests/: ext_next_check.cpp
hello_qt_socket/: CMakeLists.txt
hello_qt_socket/src/: echoserver.cpp  echoserver.h  hello_qt_socket.cpp
hello_qt_socket/tests/: CMakeLists.txt
hello_qt_socket/tests/basic_tests/: basic_check_ma.cpp  next_check.cpp
hello_socket/: CMakeLists.txt
hello_socket/myLib/: CMakeLists.txt
hello_socket/myLib/include/: NewCppClass.h
hello_socket/myLib/src/: NewCppClass.cpp
hello_socket/src/: hello_socket.cpp
hello_thread/: CMakeLists.txt
hello_thread/src/: hello_thread.cpp
hello_world/: .gitignore  CMakeLists.txt  README.md
hello_world/.config/: config.h.in  passwords.cmake
hello_world/src/: config.h  hello_world.cpp  stdafx.cpp  stdafx.h
hello_world/tests/: CMakeLists.txt
hello_world/tests/basic_tests/: math_check.cpp
hello_world/tests/ext_tests/: ext_check_ma.cpp
modern_cpp/: CMakeLists.txt  README.md
modern_cpp/.config/: config.h.in
modern_cpp/.dependencies/googletest/: CTestTestfile.cmake  cmake_install.cmake
modern_cpp/.dependencies/googletest/googlemock/: CTestTestfile.cmake  cmake_install.cmake
modern_cpp/.dependencies/googletest/googlemock/gtest/: CTestTestfile.cmake  cmake_install.cmake
modern_cpp/doc/: _languages
modern_cpp/src/: logger.h  modern.cpp  rule_of_x.cpp  rule_of_x.h  stdafx.cpp  stdafx.h
modern_cpp/src/class/: rule_of_x.cpp  rule_of_x.h
modern_cpp/src/utils/: string_utils.h
modern_cpp/tests/: CMakeLists.txt
modern_cpp/tests/_setup/: setup.cpp  setup.h  utils.cpp  utils.h
modern_cpp/tests/basic/: conditions_test.cpp  const_test.cpp  constexpr_test.cpp  ctor_test.cpp  decay_function_test.cpp  loops_test.cpp  rule_of_x_test.cpp  smart_pointer_test.cpp  strings.cpp  utils_test.cpp  var_init.cpp
modern_cpp/tests/basic/class/: test_base.cpp  test_ctor.cpp  test_rule_of_x.cpp
modern_cpp/tests/basic/class/tdd/: Name.h  ResourceManager.h  base.h
modern_cpp/tests/basic/templates/: NameEvent.h  ToJson.cpp  ToJson.h  class_template.h  function_template.h  template_test.cpp  template_test.h
